--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 		<meta charset="UTF-8">
 		<title>Overlay</title>
 		<link rel="stylesheet" href="style.css">
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800" rel="stylesheet"> 
+		
+		<link rel="stylesheet" href="./modifiers/top.css">
+		<link rel="stylesheet" href="./modifiers/lyric.css">
 	</head>
 	
 	<body>
+		<div id="lyricArea" class="hidden">
+			<span id="lyric" class="lyric-text"></span>
+		</div>
 		<div id="overlay" class="hidden">
 			<div id="performance">
 				<div class="performance-group">
