--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Overlay</title>
 		<link rel="stylesheet" href="style.css">
+		<script src="./js/FontChange.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800" rel="stylesheet"> 
 		
